@@ -13,6 +13,8 @@ https://github.com/elastic/apm-server/compare/9e0a1e281e56044745f1a4f18dcbf00a7f
 
 ==== Added
 
+- Listen on default port 8200 if unspecified {pull}[886]886.
+
 ==== Deprecated
 
 ==== Known Issues
